@@ -989,69 +989,13 @@ static void FUZ_unitTests(void)
                 crcNew = XXH64_digest(&xxhNew);
                 FUZ_CHECKTEST(crcOrig!=crcNew, "LZ4_decompress_safe() decompression corruption");
 
-                // prepare next message
+                /* prepare next message */
                 dNext += messageSize;
                 totalMessageSize += messageSize;
                 messageSize = (FUZ_rand(&randState) & maxMessageSizeMask) + 1;
                 iNext = (FUZ_rand(&randState) & 65535);
                 if (dNext + messageSize > dBufferSize) dNext = 0;
             }
-        }
-
-        // long stream test ; Warning : very long test !
-        if (1)
-        {
-            XXH64_state_t crcOrigState;
-            XXH64_state_t crcNewState;
-            const U64 totalTestSize = 6ULL << 30;
-            U64 totalTestDone = 0;
-            size_t oldStart = 0;
-            size_t oldSize  = 0;
-            U32 segNb = 1;
-
-            DISPLAY("Long HC streaming test (%u MB)\n", (U32)(totalTestSize >> 20));
-            LZ4_resetStreamHC(&sHC, 0);
-
-            XXH64_reset(&crcOrigState, 0);
-            XXH64_reset(&crcNewState, 0);
-
-            while (totalTestDone < totalTestSize)
-            {
-                size_t testSize = (FUZ_rand(&randState) & 65535) + 1;
-                size_t testStart = FUZ_rand(&randState) & 65535;
-
-                FUZ_displayUpdate((U32)(totalTestDone >> 20));
-
-                if (testStart == oldStart + oldSize)   // Corner case not covered by this test (LZ4_decompress_safe_usingDict() limitation)
-                    testStart++;
-
-                XXH64_update(&crcOrigState, testInput + testStart, testSize);
-                crcOrig = XXH64_digest(&crcOrigState);
-
-                result = LZ4_compressHC_limitedOutput_continue(&sHC, testInput + testStart, testCompressed, (int)testSize, LZ4_compressBound((int)testSize));
-                FUZ_CHECKTEST(result==0, "LZ4_compressHC_limitedOutput_continue() dictionary compression failed : result = %i", result);
-
-                result = LZ4_decompress_safe_usingDict(testCompressed, testVerify, result, (int)testSize, testInput + oldStart, (int)oldSize);
-                FUZ_CHECKTEST(result!=(int)testSize, "LZ4_decompress_safe_usingDict() dictionary decompression part %u failed", segNb);
-
-                XXH64_update(&crcNewState, testVerify, testSize);
-                crcNew = XXH64_digest(&crcNewState);
-                if (crcOrig!=crcNew)
-                {
-                    size_t c=0;
-                    while (testVerify[c] == testInput[testStart+c]) c++;
-                    DISPLAY("Bad decompression at %u / %u \n", (U32)c, (U32)testSize);
-                }
-                FUZ_CHECKTEST(crcOrig!=crcNew, "LZ4_decompress_safe_usingDict() part %u corruption", segNb);
-
-                oldStart = testStart;
-                oldSize = testSize;
-                totalTestDone += testSize;
-
-                segNb ++;
-            }
-
-            DISPLAY("\r");
         }
     }
 
